# linelint

./: Cargo.toml  README.md  action.yml
.github/workflows/: line_lint.yml  line_lint_self.yml
linelint/: Cargo.toml
linelint-cli/: Cargo.toml
linelint-cli/src/: main.rs
linelint/src/: config.rs  issue.rs  lib.rs  line.rs  linter.rs
linelint/src/rule/: line_end_lint.rs  mod.rs  trailing_ws_lint.rs
